--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
     "preact": "^10.27.2",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
-    "tailwindcss": "^4.1.16"
+    "tailwind-scrollbar-hide": "^4.0.0"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.10.2",
     "@vitejs/plugin-react": "^5.1.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.16",
     "vite": "^7.1.7"
   }
 }
