--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.10.2",
+    "@types/react": "^19.2.6",
+    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.16",
+    "typescript": "^5.9.3",
     "vite": "^7.1.7"
   }
 }
