--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.0",
     "@tailwindcss/vite": "^4.1.16",
     "preact": "^10.27.2",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.5",
     "tailwind-scrollbar-hide": "^4.0.0"
   },
@@ -19,6 +21,7 @@
     "@preact/preset-vite": "^2.10.2",
     "@types/react": "^19.2.6",
     "@types/react-dom": "^19.2.3",
+    "@types/react-redux": "^7.1.34",
     "@vitejs/plugin-react": "^5.1.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
