--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.11.0",
     "@tailwindcss/vite": "^4.1.16",
+    "@tanstack/react-query": "^5.90.11",
+    "axios": "^1.13.2",
+    "cors": "^2.8.5",
+    "motion": "^12.23.26",
+    "notistack": "^3.0.2",
     "preact": "^10.27.2",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.5",
+    "react-spinners": "^0.17.0",
     "tailwind-scrollbar-hide": "^4.0.0"
   },
   "devDependencies": {
